# cfr

./: CHANGELOG.md  README.md  cfr.cabal  default.nix
nix/: nixpkgs.nix  overrides.nix
src/: Cfr.hs  Prelude.hs
src/Cfr/: Card.hs  HandEvaluator.hs  LookupTables.hs  PopCount.hs
