cabal-version: 2.4
name:
  cfr
version:
  0.1
synopsis:
  A Haskell implementation of Counterfactual Regret Minimization for poker
description:
  A Haskell implementation of Counterfactual Regret Minimization for poker
homepage:
  https://github.com/chessai/cfr
bug-reports:
  https://github.com/chessai/cfr/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  2019 chessai
category:
  Data, Math
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Cfr
    Cfr.Card
    Cfr.LookupTables
    Cfr.PopCount
  other-modules:
    Prelude                     
  build-depends:
    , base-noprelude >= 4.10.1.0 && < 4.13
    , primitive >= 0.6.4
    , semirings >= 0.3
  ghc-options:
    -Wall
  default-language:
    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/chessai/cfr.git
